add put and delete methods
