# src/controllers/ExpenseController.ts
@@ -1,4 +1,4 @@
-import { PrismaClient } from "@prisma/client";
+import { PrismaClient, Prisma } from "@prisma/client";
 import { NextFunction, Request, Response } from "express";
 const prisma = new PrismaClient();
 
@@ -48,5 +48,54 @@ export class ExpenseController {
     });
 
     res.status(201).json(expense);
+  }
+
+  static async updateExpense(req: Request, res: Response, next: NextFunction) {
+    const id = parseInt(req.params.id);
+    const { type, description, value, category_name } = req.body as ExpenseBody;
+
+    try {
+      const expense = await prisma.expense.update({
+        where: { id },
+        data: {
+          type: type,
+          description: description,
+          value: value,
+          category:
+            category_name != null
+              ? {
+                  connect: {
+                    name: category_name,
+                  },
+                }
+              : {},
+        },
+      });
+
+      res.json(expense);
+    } catch (e) {
+      if (e instanceof Prisma.PrismaClientKnownRequestError) {
+        res.status(404).json({ message: "Expense not found" });
+      } else {
+        res.sendStatus(500);
+      }
+    }
+  }
+
+  static async deleteExpense(req: Request, res: Response, next: NextFunction) {
+    const id = parseInt(req.params.id);
+    try {
+      await prisma.expense.delete({
+        where: { id },
+      });
+
+      res.sendStatus(204);
+    } catch (e) {
+      if (e instanceof Prisma.PrismaClientKnownRequestError) {
+        res.status(404).json({ message: "Expense not found" });
+      } else {
+        res.sendStatus(500);
+      }
+    }
   }
 }
